tests/ui/unpretty/frontmatter.rs
---
//~^ ERROR expected item, found `-`
---

//@ compile-flags: -Zunpretty=normal

#![feature(frontmatter)]

fn main() {
}
